unpackaged/main/default/objects/Dental_Quote_Log__c/Dental_Quote_Log__c.object-meta.xml
<CustomObject>
    <label>Quote Log</label>
    <nameField>
        <displayFormat>DQ-{00000}</displayFormat>
        <label>Quote Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>