unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Initial Rates Released</fullName>
            </value>
            <value>
                <fullName>Pending Add&#39;l Info</fullName>
            </value>
            <value>
                <fullName>Pending StepWise</fullName>
            </value>
            <value>
                <fullName>Pending StepWise Release and Add;l Info</fullName>
                <label>Pending StepWise Release and Add&#39;l  Info</label>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>