unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Close_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Decline_Reason__c</fullName>
    <label>Close/Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Action_Taken__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uncompetitive</fullName>
            </value>
            <value>
                <fullName>Missing info</fullName>
            </value>
            <value>
                <fullName>No response from rep</fullName>
            </value>
            <value>
                <fullName>Ineligible group</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>