unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Current_Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Carrier_Name__c</fullName>
    <label>Current Carrier Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>AIG</fullName>
            </value>
            <value>
                <fullName>Ameritas</fullName>
            </value>
            <value>
                <fullName>Assurant</fullName>
            </value>
            <value>
                <fullName>BCBS</fullName>
            </value>
            <value>
                <fullName>Beam Dental</fullName>
            </value>
            <value>
                <fullName>Cigna</fullName>
            </value>
            <value>
                <fullName>Delta Dental</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Hartford</fullName>
            </value>
            <value>
                <fullName>HDS</fullName>
            </value>
            <value>
                <fullName>Humana</fullName>
            </value>
            <value>
                <fullName>Kaiser</fullName>
            </value>
            <value>
                <fullName>Lincoln National</fullName>
            </value>
            <value>
                <fullName>LSV</fullName>
            </value>
            <value>
                <fullName>MetLife</fullName>
            </value>
            <value>
                <fullName>Mutual of Omaha</fullName>
            </value>
            <value>
                <fullName>No Existing Coverage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pacific Guardian Life</fullName>
            </value>
            <value>
                <fullName>Premera</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Protective</fullName>
            </value>
            <value>
                <fullName>Prudential</fullName>
            </value>
            <value>
                <fullName>Reliance Standard</fullName>
            </value>
            <value>
                <fullName>Solstice</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Sun Life</fullName>
            </value>
            <value>
                <fullName>United Concordia</fullName>
            </value>
            <value>
                <fullName>United Healthcare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>