unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Current_Medical_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Current_Medical_Carrier__c</fullName>
    <label>Current Medical Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABCBS</fullName>
            </value>
            <value>
                <fullName>Florida Blue</fullName>
            </value>
            <value>
                <fullName>HMSA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Regence/Asuris</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>