unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Customer_s_State__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_State__c</fullName>
    <formula>IF( Opportunity_Name__r.Account.AR__c,&quot;AR&quot;,IF(Opportunity_Name__r.Account.FL__c,&quot;FL&quot;,IF(Opportunity_Name__r.Account.HI__c,&quot;HI&quot;, IF(ISBlank(Opportunity_Name__r.Account.Issue_State__c), Opportunity_Name__r.Account.BillingState , Opportunity_Name__r.Account.Issue_State__c))))</formula>
    <label>Customer&#39;s State</label>
    <type>Text</type>
</CustomField>