unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Date_of_Final_Action__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Final_Action__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Final Action</label>
    <type>Date</type>
</CustomField>