unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Date_Pended__c.field-meta.xml
<CustomField>
    <fullName>Date_Pended__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Pended</label>
    <type>Date</type>
</CustomField>