unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Date_Ready_in_StepWise__c.field-meta.xml
<CustomField>
    <fullName>Date_Ready_in_StepWise__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Ready in StepWise</label>
    <type>Date</type>
</CustomField>