unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Date_Received_by_UW__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_by_UW__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Received by UW</label>
    <type>Date</type>
</CustomField>