unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Date_Unpended__c.field-meta.xml
<CustomField>
    <fullName>Date_Unpended__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Unpended</label>
    <type>Date</type>
</CustomField>