unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Formal_Request__c.field-meta.xml
<CustomField>
    <fullName>Formal_Request__c</fullName>
    <label>Formal Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>