unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Group_Sold__c.field-meta.xml
<CustomField>
    <fullName>Group_Sold__c</fullName>
    <formula>IF( Sold_PPO_Premium__c &gt; 0, true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Sold</label>
    <type>Checkbox</type>
</CustomField>