unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Implementation_Credit__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Credit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Implementation Credit</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>