unpackaged/main/default/objects/Dental_Quote_Log__c/fields/LSV_Sales_Executive__c.field-meta.xml
<CustomField>
    <fullName>LSV_Sales_Executive__c</fullName>
    <label>LSV Sales Executive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Al Alonso</fullName>
            </value>
            <value>
                <fullName>Annie Cooper</fullName>
            </value>
            <value>
                <fullName>Bev Luney</fullName>
            </value>
            <value>
                <fullName>Billy Ward</fullName>
            </value>
            <value>
                <fullName>Calvin Whitaker</fullName>
            </value>
            <value>
                <fullName>Christie Hoskins</fullName>
            </value>
            <value>
                <fullName>Craig Westling</fullName>
            </value>
            <value>
                <fullName>Dani Barney</fullName>
            </value>
            <value>
                <fullName>Darlene Shelby</fullName>
            </value>
            <value>
                <fullName>Gary Bello</fullName>
            </value>
            <value>
                <fullName>Glenn Davis</fullName>
            </value>
            <value>
                <fullName>Greg Sutton</fullName>
            </value>
            <value>
                <fullName>Janet Bronson</fullName>
            </value>
            <value>
                <fullName>Jason Young</fullName>
            </value>
            <value>
                <fullName>Jeff Schmidt</fullName>
            </value>
            <value>
                <fullName>Kristin Todd</fullName>
            </value>
            <value>
                <fullName>Lee Messervy</fullName>
            </value>
            <value>
                <fullName>Leesa Albert</fullName>
            </value>
            <value>
                <fullName>Nick Mirante</fullName>
            </value>
            <value>
                <fullName>Peter Zornik</fullName>
            </value>
            <value>
                <fullName>Patricia Eshaia</fullName>
            </value>
            <value>
                <fullName>Ryan Anderson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>