unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Market_Size__c.field-meta.xml
<CustomField>
    <fullName>Market_Size__c</fullName>
    <description>This field should be mandatory for all quotes related to Cambia/Regence partner</description>
    <label>Market Size (Regence Only)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>