unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Multi_Line_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Multi_Line_Discount_Amount__c</fullName>
    <label>Multi-Line Discount $ Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>