unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Multi_Option_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Multi_Option_Indicator__c</fullName>
    <label>Multi-Option Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Dual</fullName>
            </value>
            <value>
                <fullName>Triple</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>