unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Number_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Number_Eligible__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number Eligible</label>
    <length>10</length>
    <type>Text</type>
</CustomField>