unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Opportunity_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Effective_Date__c</fullName>
    <formula>Opportunity_Name__r.Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Effective Date</label>
    <type>Date</type>
</CustomField>