unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Dental_Quote_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>