unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Partner_Rep__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep__c</fullName>
    <formula>Opportunity_Name__r.Partner_Rep__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Rep</label>
    <type>Text</type>
</CustomField>