unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Partner_Rep_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Territory_Code__c</fullName>
    <formula>Opportunity_Name__r.Partner_Rep_Territory_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Rep Territory Code</label>
    <type>Text</type>
</CustomField>