unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Partner_Rep_VP__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_VP__c</fullName>
    <formula>Opportunity_Name__r.Partner_Rep_VP__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Rep VP</label>
    <type>Text</type>
</CustomField>