unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Date__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Date</label>
    <type>Date</type>
</CustomField>