unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name__c</fullName>
    <formula>Name  + &quot; - &quot; &amp; Account_Name__c &amp; &quot; - &quot; &amp;   TEXT(  Opportunity_Effective_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Name</label>
    <type>Text</type>
</CustomField>