unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status__c</fullName>
    <label>Quote Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
                <isActive>false</isActive>
                <label>Analysis</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Awaiting Response</fullName>
                <isActive>false</isActive>
                <label>Awaiting Response</label>
            </value>
            <value>
                <fullName>Awaiting Response Externally</fullName>
                <isActive>false</isActive>
                <label>Awaiting Response Externally</label>
            </value>
            <value>
                <fullName>Awaiting Response Internally</fullName>
                <isActive>false</isActive>
                <label>Awaiting Response Internally</label>
            </value>
            <value>
                <fullName>Follow Up Needed</fullName>
                <isActive>false</isActive>
                <label>Follow Up Needed</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Pending Underwriting Approval</fullName>
                <isActive>false</isActive>
                <label>Pending Underwriting Approval</label>
            </value>
            <value>
                <fullName>Received</fullName>
                <isActive>false</isActive>
                <label>Received</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <isActive>false</isActive>
                <label>Submitted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>