unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Alternate</fullName>
            </value>
            <value>
                <fullName>Virgin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>