unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Quoted_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Ratio__c</fullName>
    <formula>IF ( OR (ISBLANK(  Renewal_PPO_Annual_Premium__c  ),  Renewal_PPO_Annual_Premium__c =0) ,   Quoted_PPO_Annual_Premium__c  /   Current_PPO_Annual_Premium__c  , Quoted_PPO_Annual_Premium__c  /  Renewal_PPO_Annual_Premium__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quoted Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>