unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Relation_to_Renewal_Premium__c.field-meta.xml
<CustomField>
    <fullName>Relation_to_Renewal_Premium__c</fullName>
    <description>Field created to monitor premium competitiveness.</description>
    <formula>Quoted_PPO_Annual_Premium__c / Renewal_PPO_Annual_Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>=  Quoted PPO Annual Premium / Renewal PPO Annual Premium</inlineHelpText>
    <label>Relation to Renewal Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>