unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Renewal_PPO_Annual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Renewal_PPO_Annual_Premium__c</fullName>
    <label>Renewal PPO Annual Premium</label>
    <summarizedField>Quote_Log_Product__c.Renewal_Annual_Premium__c</summarizedField>
    <summaryFilterItems>
        <field>Quote_Log_Product__c.Product_Sub_Cat__c</field>
        <operation>equals</operation>
        <value>Choice PPO - Vol, Choice Plus PPO - Vol, Choice Copay - Vol, Choice PPO - TG, Choice Plus PPO - TG, Choice Copay - TG, Select PPO - Vol, Select PPO Plus -Vol, Select PPO - Trad, Select PPO Plus – Trad, PPO, PPO/DMO</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote_Log_Product__c.Quote_Log__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>