unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Sales_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Initiative__c</fullName>
    <label>Sales Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsolicited</fullName>
            </value>
            <value>
                <fullName>Blue Value Solutions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>