unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central (AR &amp; FL)</fullName>
            </value>
            <value>
                <fullName>East (AR)</fullName>
            </value>
            <value>
                <fullName>Government &amp; Public (FL)</fullName>
            </value>
            <value>
                <fullName>Hawaii</fullName>
            </value>
            <value>
                <fullName>Major &amp; National (FL)</fullName>
            </value>
            <value>
                <fullName>North (FL)</fullName>
            </value>
            <value>
                <fullName>Northeast (AR)</fullName>
            </value>
            <value>
                <fullName>Northwest (AR &amp; FL)</fullName>
            </value>
            <value>
                <fullName>South (FL)</fullName>
            </value>
            <value>
                <fullName>South Central (AR)</fullName>
            </value>
            <value>
                <fullName>Southeast (AR)</fullName>
            </value>
            <value>
                <fullName>Southwest (AR)</fullName>
            </value>
            <value>
                <fullName>West Central (AR)</fullName>
            </value>
            <value>
                <fullName>West Coast (FL)</fullName>
            </value>
            <value>
                <fullName>ID (RG)</fullName>
            </value>
            <value>
                <fullName>OR (RG)</fullName>
            </value>
            <value>
                <fullName>UT (RG)</fullName>
            </value>
            <value>
                <fullName>WA (RG)</fullName>
            </value>
            <value>
                <fullName>Clark County (RG)</fullName>
            </value>
            <value>
                <fullName>Asuris (RG)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>