unpackaged/main/default/objects/Dental_Quote_Log__c/fields/Type_of_Rating__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Rating__c</fullName>
    <label>Type of Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Blended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>