unpackaged/main/default/objects/Dental_Quote_Log__c/validationRules/Closed_Declined_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Declined_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Action_Taken__c , &quot;Closed&quot;) &amp;&amp; ISPICKVAL( Action_Taken__c , &quot;Declined&quot;)</errorConditionFormula>
    <errorDisplayField>Close_Decline_Reason__c</errorDisplayField>
    <errorMessage>Please select a Closed or Declined reason</errorMessage>
</ValidationRule>