unpackaged/main/default/objects/Dental_Quote_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote_Status__c</columns>
    <columns>Action_Taken__c</columns>
    <columns>Date_of_Final_Action__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity_Effective_Date__c</columns>
    <columns>Number_Eligible__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Partner_Rep__c</columns>
    <columns>LSV_Sales_Executive__c</columns>
    <columns>Date_Received_by_UW__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>