unpackaged/main/default/objects/Dental_Quote_Log__c/listViews/ALL_Open_Quote_Logs.listView-meta.xml
<ListView>
    <fullName>ALL_Open_Quote_Logs</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity_Effective_Date__c</columns>
    <columns>Number_Eligible__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Partner_Rep__c</columns>
    <columns>LSV_Sales_Executive__c</columns>
    <columns>Date_Received_by_UW__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Action_Taken__c</columns>
    <columns>Date_Pended__c</columns>
    <columns>Date_Unpended__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quote_Status__c</field>
        <operation>equals</operation>
        <value>In Process</value>
    </filters>
    <label>ALL Quotes In Process</label>
    <sharedTo>
        <role>Dental_UW</role>
    </sharedTo>
</ListView>